--- a/firebase.json
+++ b/firebase.json
@@ -13,11 +13,22 @@
         "firebase-debug.log",
         "firebase-debug.*.log"
       ],
-
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run build",
         "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
-  ]
+  ],
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
 }
