--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "leo-profanity": "^1.7.0"
   },
   "devDependencies": {
+    "@types/leo-profanity": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
